Change after success travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
 env:
   global:
     secure: FAKE # You should `travis` to set the environment variables used by these scripts.
+    COMMIT=${TRAVIS_COMMIT::8}
 before_install: bash before-install.sh
 before_script: mkdir dist
 script: stack test --no-terminal --install-ghc --coverage --local-bin-path dist --copy-bins
@@ -16,4 +17,12 @@ cache:
   directories: 
     - "$HOME/.stack" 
     - .stack-work
-after_success: bash after-success.sh
+after_success:
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
+  - export REPO=janosp/amexbackend
+  - docker build -f Dockerfile -t $REPO:$COMMIT .
+  - docker build -f Dockerfile -t $REPO:$COMMIT . 
+  - docker tag $REPO:$COMMIT $REPO:$TAG 
+  - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER 
+  - docker push $REPO
