fix travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,8 @@ cache:
     - .stack-work
 after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
   - export REPO=janosp/amexbackend
   - docker build -f Dockerfile -t $REPO:$COMMIT .
-  - docker build -f Dockerfile -t $REPO:$COMMIT . 
-  - docker tag $REPO:$COMMIT $REPO:$TAG 
+  - docker tag $REPO:$COMMIT $REPO:latest
   - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER 
   - docker push $REPO
