fix travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ cache:
 after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - export REPO=janosp/amexbackend
+  - echo $TRAVIS_BRANCH
+  - echo $COMMIT
   - docker build -f Dockerfile -t $REPO:$COMMIT .
-  - docker tag $REPO:$COMMIT $REPO:latest
   - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER 
   - docker push $REPO
